Support deposit events for non-custodial accounts
Add support to add and remove non-custodial accounts that can be watched
for deposit events.

This change adds a new column `Type` to `Account` to distinct `custodial` and
`non-custodial` accounts.
