# handlers/accounts_func.go
@@ -1,9 +1,13 @@
 package handlers
 
 import (
+	"encoding/json"
+	"fmt"
 	"net/http"
 	"strconv"
 
+	"github.com/flow-hydraulics/flow-wallet-api/accounts"
+	"github.com/flow-hydraulics/flow-wallet-api/errors"
 	"github.com/gorilla/mux"
 )
 
@@ -66,4 +70,44 @@ func (s *Accounts) DetailsFunc(rw http.ResponseWriter, r *http.Request) {
 	}
 
 	handleJsonResponse(rw, http.StatusOK, res)
+}
+
+func (s *Accounts) AddNonCustodialAccountFunc(rw http.ResponseWriter, r *http.Request) {
+	err := checkNonEmptyBody(r)
+	if err != nil {
+		handleError(rw, s.log, err)
+		return
+	}
+
+	var b accounts.Account
+
+	// Try to decode the request body into the struct.
+	err = json.NewDecoder(r.Body).Decode(&b)
+	if err != nil {
+		err = &errors.RequestError{
+			StatusCode: http.StatusBadRequest,
+			Err:        fmt.Errorf("invalid body"),
+		}
+		handleError(rw, s.log, err)
+		return
+	}
+
+	a, err := s.service.AddNonCustodialAccount(r.Context(), b.Address)
+	if err != nil {
+		handleError(rw, s.log, err)
+	}
+
+	handleJsonResponse(rw, http.StatusCreated, a)
+}
+
+func (s *Accounts) DeleteNonCustodialAccountFunc(rw http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+
+	err := s.service.DeleteNonCustodialAccount(r.Context(), vars["address"])
+	if err != nil {
+		handleError(rw, s.log, err)
+		return
+	}
+
+	rw.WriteHeader(http.StatusOK)
 }
